[package]
name = "nixfleet-proto"
version = "0.2.0"
edition = "2021"
description = "NixFleet v0.2 boundary-contract types (CONTRACTS.md §I)"
license = "MIT"
repository = "https://github.com/arcanesys/nixfleet"
homepage = "https://github.com/arcanesys/nixfleet"
authors = ["nixfleet contributors"]

[lib]
name = "nixfleet_proto"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
nixfleet-canonicalize = { path = "../nixfleet-canonicalize" }
anyhow = "1"
serde_json = "1"
