[package]
name = "nixfleet-reconciler"
version = "0.2.0"
edition = "2021"
description = "Pure-function rollout decision procedure + RFC-0002 §4 step 0 verification"
license = "MIT"
repository = "https://github.com/arcanesys/nixfleet"
homepage = "https://github.com/arcanesys/nixfleet"
authors = ["nixfleet contributors"]

[lib]
name = "nixfleet_reconciler"
path = "src/lib.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-canonicalize = { path = "../nixfleet-canonicalize" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
p256 = { version = "0.13", features = ["ecdsa"] }
anyhow = "1"
thiserror = "2"
base64 = "0.22"

[dev-dependencies]
rand = "0.9"
