[package]
name = "nixfleet-reconciler"
description = "Pure-function rollout decision procedure + RFC-0002 §4 step 0 verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "nixfleet_reconciler"
path = "src/lib.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-canonicalize = { path = "../nixfleet-canonicalize" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
ssh-key = { workspace = true }

[dev-dependencies]
# Enable the shared FleetBuilder fixture API for tests.
nixfleet-proto = { path = "../nixfleet-proto", features = ["testing"] }
