[package]
name = "nixfleet-release"
description = "Producer for fleet.resolved.json (CONTRACTS §I #1) - orchestrates build -> inject closureHash -> stamp meta -> canonicalize -> sign -> release"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "nixfleet_release"
path = "src/lib.rs"

[[bin]]
name = "nixfleet-release"
path = "src/main.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-canonicalize = { path = "../nixfleet-canonicalize" }
nixfleet-reconciler = { path = "../nixfleet-reconciler" }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
base64 = { workspace = true }
