[package]
name = "nixfleet-verify-artifact"
description = "Offline verifier CLI: fleet.resolved artifacts + signed probe-output evidence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "nixfleet-verify-artifact"
path = "src/main.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-reconciler = { path = "../nixfleet-reconciler" }
chrono = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
